fix contrast of * on callout text

--- a/client/src/scss/components/_landing-page.scss
+++ b/client/src/scss/components/_landing-page.scss
@@ -70,6 +70,7 @@
         color: $teal;
         font-size: 1.5em;
       }
+
       p:nth-child(1) {
         font-family: $heading-text;
         margin-top: 0.5em;
@@ -84,8 +85,12 @@
       }
       p:nth-child(2) {
           font-size: 0.8em;
-          margin-top: 1em;
+          margin-top: 0.5em;
           margin-bottom: 0;
+
+          .teal-text {
+            font-size: 2em;
+          }
 
           @media only screen and (min-width: $tiny-break) {
       		  font-size: 0.9em;
